// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormField > renders with as correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</section>"
`;

exports[`FormField > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with default slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">Default slot
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p id="v-0-0-description" data-slot="description" class="">Description slot</p>
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with error correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div id="v-0-0-error" data-slot="error" class="">Username is already taken</div>
  </div>
</div>"
`;

exports[`FormField > renders with error slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div id="v-0-0-error" data-slot="error" class="">Error slot</div>
  </div>
</div>"
`;

exports[`FormField > renders with help correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div id="v-0-0-help" data-slot="help" class="">Username must be unique</div>
  </div>
</div>"
`;

exports[`FormField > renders with help slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div id="v-0-0-help" data-slot="help" class="">Help slot</div>
  </div>
</div>"
`;

exports[`FormField > renders with hint correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with hint slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with label and description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class=""><label for="v-0-0" data-slot="label" class="">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="">Enter your username</p>
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with label slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class=""><label for="v-0-0" data-slot="label" class="">Label slot</label>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class=""><label for="v-0-0" data-slot="label" class="">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="">Enter your username</p>
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class=""><label for="v-0-0" data-slot="label" class="">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="">Enter your username</p>
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with required correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class=""><label for="v-0-0" data-slot="label" class="">Username</label>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size lg correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class=""><label for="v-0-0" data-slot="label" class="">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="">Enter your username</p>
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size md correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class=""><label for="v-0-0" data-slot="label" class="">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="">Enter your username</p>
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size sm correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class=""><label for="v-0-0" data-slot="label" class="">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="">Enter your username</p>
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size xl correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class=""><label for="v-0-0" data-slot="label" class="">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="">Enter your username</p>
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size xs correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class=""><label for="v-0-0" data-slot="label" class="">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="">Enter your username</p>
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;
